# NH3_storage_agent

./: AGENT.md  ARCHITECTURE.md  CITATION.cff  LICENSE  MCP.md  MODIFICATION_SUMMARY.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  app_streamlit.py  chainlit.md  chainlit_nh3_agent.py  pyproject.toml  requirements.txt
data/: README.md
data/demo/: DigHyd_database.xlsx  Digbat_Hydride.xlsx  NH3_storage_data_records.xlsx
data/schema/: databases.md
examples/: expected_routes.json  representative_queries.md
hydride_agent/: __init__.py  agent.py  api.py  cli.py  config.py  database_tools.py  llm.py  mcp_server.py  models.py  orchestration.py  reporting.py  tool_manifest.json
hydride_agent/skills/: __init__.py  base.py  catalog.json  common.py  computational_design.py  conductivity_loading.py  dual_axis.py  h2_release_loading.py  mechanism_synthesis.py  state_complexity.py  state_sequence_lookup.py
scripts/: reproduce_all_examples.py
tests/: conftest.py  test_demo_skills.py  test_formula_parsing.py  test_output_policy.py  test_routing.py
